QA bugs; fix scrollbars; make account sessions 24 hour (#420)
* fix some QA bugs; fix scrollbar issues; make session length 24h

* add scrollbar for account history

* move scrollbar from AccountAssets to parent

* use maxheight prop instead of passing a ref

--- a/extension/src/popup/components/manageAssets/ManageAssetRows/styles.scss
+++ b/extension/src/popup/components/manageAssets/ManageAssetRows/styles.scss
@@ -1,8 +1,19 @@
 .ManageAssetRows {
-  display: flex;
-  flex-direction: column;
-  gap: 2.375rem;
-  justify-content: space-between;
+  &__scrollbar {
+    padding-right: var(--popup--side-padding);
+    width: calc(var(--popup--width) - var(--popup--side-padding));
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    justify-content: space-between;
+  }
+
+  &--scrolling {
+    padding-right: 0.625rem;
+  }
 
   &__row {
     display: flex;
@@ -23,31 +34,12 @@
   &__code {
     color: var(--pal-text-primary);
     flex-grow: 1;
+    line-height: 1.5rem;
   }
 
   &__domain {
     color: var(--pal-text-tertiary);
     font-size: var(--font-size-secondary);
     line-height: 1.375rem;
-  }
-
-  &__button {
-    align-items: center;
-    background: var(--pal-example-details);
-    border-radius: 5rem;
-    color: var(--pal-text-primary);
-    cursor: pointer;
-    display: flex;
-    font-size: var(--font-size-secondary);
-    font-weight: var(--font-weight-medium);
-    gap: 0.5rem;
-    line-height: 1.5rem;
-    padding: 0.25rem 0.5rem;
-    text-transform: uppercase;
-
-    &--submitting {
-      color: var(--pal-text-tertiary);
-      cursor: not-allowed;
-    }
   }
 }
